add image to ipynb

--- a/MONAIによる3Dセグメンテーション入門/3D_segmentation.ipynb
+++ b/MONAIによる3Dセグメンテーション入門/3D_segmentation.ipynb
@@ -611,6 +611,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b27f78ea",
+   "metadata": {},
+   "source": [
+    "##### **TensorBoardでの実験経過確認**\n",
+    "```\n",
+    "tensorboard --logdir logsへのパス\n",
+    "```\n",
+    "![TensorBoardでの実験経過確認](https://github.com/nvidiasamp/NSAMP-WORKSHOP-2024/blob/main/MONAI%E3%81%AB%E3%82%88%E3%82%8B3D%E3%82%BB%E3%82%B0%E3%83%A1%E3%83%B3%E3%83%86%E3%83%BC%E3%82%B7%E3%83%A7%E3%83%B3%E5%85%A5%E9%96%80/images/Tensorboard_viz.png?raw=true)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e63c20db-8a8d-44d7-b1cf-6bc1d99945e3",
    "metadata": {},
    "source": [
