--- a/RAG性能評価入門/src/evaluate_rag.ipynb
+++ b/RAG性能評価入門/src/evaluate_rag.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        " 'answer_start': 0}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,13 +373,13 @@
        "9     2.265625     2.343750   3.531250    0.621094   0.632812  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.DataFrame(\n",
+    "results_df = pd.DataFrame(\n",
     "    [\n",
     "        (\n",
     "            question,\n",
@@ -402,62 +402,7 @@
     "        \"verbosity\",\n",
     "    ],\n",
     ")\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### RAGASの実装"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Dataset' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21massemble_ragas_dataset\u001b[39m(input_data: \u001b[38;5;28mlist\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[43mDataset\u001b[49m:\n\u001b[0;32m      2\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"ragas用にデータを整える関数\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \n\u001b[0;32m      4\u001b[0m \u001b[38;5;124;03m        input_data (list):\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m      8\u001b[0m \n\u001b[0;32m      9\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m     10\u001b[0m     question_list \u001b[38;5;241m=\u001b[39m [item[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mquestion\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m input_data]\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Dataset' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "def assemble_ragas_dataset(input_data: list) -> Dataset:\n",
-    "    \"\"\"ragas用にデータを整える関数\n",
-    "\n",
-    "        input_data (list):\n",
-    "\n",
-    "    Returns:\n",
-    "        Dataset: ragasに入力するためのデータセット\n",
-    "\n",
-    "    \"\"\"\n",
-    "    question_list = [item[\"question\"] for item in input_data]\n",
-    "    context_list = [[item[\"context\"]] for item in input_data]\n",
-    "    answer_list = [item[\"rag_answer_text\"] for item in input_data]\n",
-    "    ground_truth_list = [item[\"answer_text\"] for item in input_data]\n",
-    "\n",
-    "    return Dataset.from_dict(\n",
-    "        {\n",
-    "            \"question\": question_list,\n",
-    "            \"contexts\": context_list,\n",
-    "            \"answer\": answer_list,\n",
-    "            \"ground_truth\": ground_truth_list,\n",
-    "        },\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "ragas_input_ds = assemble_ragas_dataset(combined_data_processed)\n",
-    "ragas_results = evaluate(ragas_input_ds)\n",
-    "\n",
-    "ragas_results.to_pandas()\n"
+    "results_df"
    ]
   },
   {
