--- a/RAG性能評価入門/src/evaluate_rag.ipynb
+++ b/RAG性能評価入門/src/evaluate_rag.ipynb
@@ -9,18 +9,23 @@
     "import os\n",
     "import pandas as pd\n",
     "\n",
-    "from datasets import Dataset, load_dataset, concatenate_datasets\n",
-    "from openai import OpenAI\n",
+    "from datasets import load_dataset, concatenate_datasets\n",
     "from ragas import evaluate\n",
-    "from openai import AsyncOpenAI\n",
-    "\n",
+    "from openai import AsyncOpenAI\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "NVIDIA_API_KEY = os.getenv(\"NVIDIA_API_KEY\")\n",
-    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
     "\n",
     "client = AsyncOpenAI(\n",
     "    base_url=\"https://integrate.api.nvidia.com/v1\",\n",
     "    api_key=NVIDIA_API_KEY,  # 取得したAPIキーを入力してください\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -75,16 +80,23 @@
     "\n",
     "# データが多いため10件に絞る\n",
     "combined_data_processed = combined_data_processed[:10]\n",
-    "combined_data_processed[0]"
+    "combined_data_processed[0]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### llama3-70b-instructを用いて回答作成"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_answer(question: str, context: str) -> str:\n",
+    "async def generate_answer(client, question: str, context: str) -> str:\n",
     "    \"\"\"APIを使ってLLMによる解答を得る関数\n",
     "\n",
     "    Question (str): 質問内容\n",
@@ -94,8 +106,8 @@
     "        response.choices[0].message.content(str): contextを元に回答したLLMの回答内容\n",
     "\n",
     "    \"\"\"\n",
-    "    response = OpenAI().chat.completions.create(\n",
-    "        model=\"gpt-4o-mini\",\n",
+    "    response = await client.chat.completions.create(\n",
+    "        model=\"meta/llama3-70b-instruct\",\n",
     "        messages=[\n",
     "            {\n",
     "                \"role\": \"system\",\n",
@@ -109,17 +121,19 @@
     "        max_tokens=15,\n",
     "        temperature=0,\n",
     "    )\n",
-    "    return response.choices[0].message.content"
+    "    return response.choices[0].message.content\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "for item in combined_data_processed:\n",
-    "    item[\"rag_answer_text\"] = generate_answer(item[\"question\"], item[\"context\"])"
+    "    item[\"rag_answer_text\"] = await generate_answer(\n",
+    "        client, item[\"question\"], item[\"context\"]\n",
+    "    )\n"
    ]
   },
   {
@@ -131,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,12 +209,12 @@
     "            answer,\n",
     "        )\n",
     "        results.append((question, answer, scores))\n",
-    "    return results"
+    "    return results\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -256,52 +270,52 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>手塚治虫の出身地はどこになりますか?</td>\n",
-       "      <td>兵庫県宝塚市</td>\n",
-       "      <td>2.796875</td>\n",
-       "      <td>2.875000</td>\n",
-       "      <td>3.765625</td>\n",
-       "      <td>0.722656</td>\n",
-       "      <td>0.726562</td>\n",
+       "      <td>大阪府豊能郡豊中町（現在の豊中市）</td>\n",
+       "      <td>3.015625</td>\n",
+       "      <td>2.984375</td>\n",
+       "      <td>3.687500</td>\n",
+       "      <td>0.757812</td>\n",
+       "      <td>0.820312</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>手塚治虫の漫画家としてのデビュー作は何かな?</td>\n",
-       "      <td>『マアチャンの日記帳』</td>\n",
-       "      <td>2.250000</td>\n",
-       "      <td>2.296875</td>\n",
-       "      <td>3.453125</td>\n",
-       "      <td>0.640625</td>\n",
-       "      <td>0.488281</td>\n",
+       "      <td>マアチャンの日記帳</td>\n",
+       "      <td>2.312500</td>\n",
+       "      <td>2.437500</td>\n",
+       "      <td>3.406250</td>\n",
+       "      <td>0.566406</td>\n",
+       "      <td>0.707031</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1947年に大阪に赤本ブームが起こったのはなぜ?</td>\n",
-       "      <td>『新寶島』のベストセラーによる。</td>\n",
-       "      <td>1.265625</td>\n",
-       "      <td>1.312500</td>\n",
-       "      <td>3.093750</td>\n",
-       "      <td>0.660156</td>\n",
-       "      <td>0.257812</td>\n",
+       "      <td>酒井七馬原案の描き下ろし単行本</td>\n",
+       "      <td>0.279297</td>\n",
+       "      <td>0.087891</td>\n",
+       "      <td>2.375000</td>\n",
+       "      <td>0.049316</td>\n",
+       "      <td>0.761719</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>日本で一番初めに30分枠のテレビアニメとなった作品名は何?</td>\n",
-       "      <td>『鉄腕アトム』</td>\n",
-       "      <td>2.593750</td>\n",
-       "      <td>2.875000</td>\n",
-       "      <td>3.500000</td>\n",
-       "      <td>0.800781</td>\n",
-       "      <td>0.687500</td>\n",
+       "      <td>鉄腕アトム</td>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>2.906250</td>\n",
+       "      <td>3.515625</td>\n",
+       "      <td>0.742188</td>\n",
+       "      <td>0.746094</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>手塚治虫の代表作である『鉄腕アトム』、『リボンの騎士』、『アドルフに告ぐ』の中で、最も遅く発...</td>\n",
-       "      <td>『アドルフに告ぐ』</td>\n",
-       "      <td>3.203125</td>\n",
-       "      <td>3.671875</td>\n",
-       "      <td>3.781250</td>\n",
-       "      <td>0.925781</td>\n",
-       "      <td>0.789062</td>\n",
+       "      <td>アドルフに告ぐ</td>\n",
+       "      <td>3.328125</td>\n",
+       "      <td>3.796875</td>\n",
+       "      <td>3.828125</td>\n",
+       "      <td>0.886719</td>\n",
+       "      <td>0.753906</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -316,12 +330,12 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>『紙の砦』や『どついたれ』などの自伝的作品の中にも描写されている手塚治虫にとって命を落として...</td>\n",
-       "      <td>大阪大空襲</td>\n",
-       "      <td>0.245117</td>\n",
-       "      <td>0.386719</td>\n",
-       "      <td>2.953125</td>\n",
-       "      <td>0.394531</td>\n",
-       "      <td>0.220703</td>\n",
+       "      <td>大阪大空襲。</td>\n",
+       "      <td>0.707031</td>\n",
+       "      <td>0.957031</td>\n",
+       "      <td>3.093750</td>\n",
+       "      <td>0.486328</td>\n",
+       "      <td>0.369141</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -348,32 +362,32 @@
        "</div>"
       ],
       "text/plain": [
-       "                                            question            answer  \\\n",
-       "0                戦後日本のストーリー漫画の第一人者で、医学博士の一面もある漫画家は誰?              手塚治虫   \n",
-       "1                                 手塚治虫の出身地はどこになりますか?            兵庫県宝塚市   \n",
-       "2                             手塚治虫の漫画家としてのデビュー作は何かな?       『マアチャンの日記帳』   \n",
-       "3                           1947年に大阪に赤本ブームが起こったのはなぜ?  『新寶島』のベストセラーによる。   \n",
-       "4                      日本で一番初めに30分枠のテレビアニメとなった作品名は何?           『鉄腕アトム』   \n",
-       "5  手塚治虫の代表作である『鉄腕アトム』、『リボンの騎士』、『アドルフに告ぐ』の中で、最も遅く発...         『アドルフに告ぐ』   \n",
-       "6          手塚治虫が軍事色が強かった時期にも関わらず、精力的に漫画活動を行った学校の名前は?         大阪府立北野中学校   \n",
-       "7  『紙の砦』や『どついたれ』などの自伝的作品の中にも描写されている手塚治虫にとって命を落として...             大阪大空襲   \n",
-       "8                      『紙の砦』と『どついたれ』の作品はどちらが早く描かれたの?             『紙の砦』   \n",
-       "9                         『マアチャンの日記帳』の連載期間はいつからいつまで?   1946年1月1日-3月31日   \n",
+       "                                            question             answer  \\\n",
+       "0                戦後日本のストーリー漫画の第一人者で、医学博士の一面もある漫画家は誰?               手塚治虫   \n",
+       "1                                 手塚治虫の出身地はどこになりますか?  大阪府豊能郡豊中町（現在の豊中市）   \n",
+       "2                             手塚治虫の漫画家としてのデビュー作は何かな?          マアチャンの日記帳   \n",
+       "3                           1947年に大阪に赤本ブームが起こったのはなぜ?    酒井七馬原案の描き下ろし単行本   \n",
+       "4                      日本で一番初めに30分枠のテレビアニメとなった作品名は何?              鉄腕アトム   \n",
+       "5  手塚治虫の代表作である『鉄腕アトム』、『リボンの騎士』、『アドルフに告ぐ』の中で、最も遅く発...            アドルフに告ぐ   \n",
+       "6          手塚治虫が軍事色が強かった時期にも関わらず、精力的に漫画活動を行った学校の名前は?          大阪府立北野中学校   \n",
+       "7  『紙の砦』や『どついたれ』などの自伝的作品の中にも描写されている手塚治虫にとって命を落として...             大阪大空襲。   \n",
+       "8                      『紙の砦』と『どついたれ』の作品はどちらが早く描かれたの?              『紙の砦』   \n",
+       "9                         『マアチャンの日記帳』の連載期間はいつからいつまで?    1946年1月1日-3月31日   \n",
        "\n",
        "   helpfulness  correctness  coherence  complexity  verbosity  \n",
        "0     3.109375     3.171875   3.687500    0.792969   0.691406  \n",
-       "1     2.796875     2.875000   3.765625    0.722656   0.726562  \n",
-       "2     2.250000     2.296875   3.453125    0.640625   0.488281  \n",
-       "3     1.265625     1.312500   3.093750    0.660156   0.257812  \n",
-       "4     2.593750     2.875000   3.500000    0.800781   0.687500  \n",
-       "5     3.203125     3.671875   3.781250    0.925781   0.789062  \n",
+       "1     3.015625     2.984375   3.687500    0.757812   0.820312  \n",
+       "2     2.312500     2.437500   3.406250    0.566406   0.707031  \n",
+       "3     0.279297     0.087891   2.375000    0.049316   0.761719  \n",
+       "4     2.500000     2.906250   3.515625    0.742188   0.746094  \n",
+       "5     3.328125     3.796875   3.828125    0.886719   0.753906  \n",
        "6     1.390625     1.515625   3.265625    0.488281   0.777344  \n",
-       "7     0.245117     0.386719   2.953125    0.394531   0.220703  \n",
+       "7     0.707031     0.957031   3.093750    0.486328   0.369141  \n",
        "8     0.367188     0.765625   3.171875    0.269531   0.116211  \n",
        "9     2.265625     2.343750   3.531250    0.621094   0.632812  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +416,7 @@
     "        \"verbosity\",\n",
     "    ],\n",
     ")\n",
-    "results_df"
+    "results_df\n"
    ]
   },
   {
