--- a/MONAIによる3Dセグメンテーション入門/3D_segmentation.ipynb
+++ b/MONAIによる3Dセグメンテーション入門/3D_segmentation.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "723209d9-02b9-4186-a8bd-a7f149324e21",
    "metadata": {
     "tags": []
@@ -184,7 +184,8 @@
     "               \"kidney\": 1,\n",
     "               \"tumor\": 2}\n",
     "\n",
-    "\n",
+    "#変換関数\n",
+    "#複雑なカスタムデータセットクラスを書かず、簡単に\n",
     "train_transforms = Compose([\n",
     "                    # 画像とラベルを読み込む\n",
     "                    LoadImaged(keys=[\"image\", \"label\"],image_only=False),\n",
@@ -414,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "3f91aebb-a670-4619-a402-89301601eaf2",
    "metadata": {
     "tags": []
@@ -463,6 +464,7 @@
     "        self.model = model\n",
     "        self.n_epochs = config[\"max_epochs\"]\n",
     "        self.lr = config[\"lr\"]\n",
+    "        #MONAIの損失関数、評価指標を利用\n",
     "        self.loss = DiceCELoss(to_onehot_y=True, softmax=True)\n",
     "        self.optimizer = optim.AdamW(model.parameters(), lr=self.lr, weight_decay=1e-5)\n",
     "        self.dice_metric = DiceMetric(include_background=False, reduction=\"mean_batch\", get_not_nans=False)\n",
@@ -472,6 +474,7 @@
     "        self.device = device\n",
     "        self.out_channels = config[\"class_num\"]\n",
     "        self.label_names = config[\"label_names\"].keys()\n",
+    "        #MONAIの変換モジュールを利用\n",
     "        self.post_label = AsDiscrete(to_onehot=config[\"class_num\"]) # class n\n",
     "        self.post_pred = AsDiscrete(argmax=True, to_onehot=config[\"class_num\"]) # class n\n",
     "        self.sw_batch_num = config[\"sw_batch_size\"]\n",
@@ -567,6 +570,7 @@
     "                \n",
     "                with torch.cuda.amp.autocast():\n",
     "                    #ボリュームをパッチごとに推論\n",
+    "                    #複雑なsliding window inferenceを一行で\n",
     "                    logit = sliding_window_inference(images, self.rand_crop_size, self.sw_batch_num, self.model, device=self.infer_device)\n",
     "                    logit = logit.cpu()\n",
     "                    loss = self.loss(logit, labels)\n",
