コメントを一部修正

--- a/RAG性能評価入門/src/evaluate_rag.ipynb
+++ b/RAG性能評価入門/src/evaluate_rag.ipynb
@@ -100,7 +100,7 @@
    "outputs": [],
    "source": [
     "async def rag_generate_answer(client, question: str, context: str) -> str:\n",
-    "    \"\"\"APIを使ってLLMによる解答を得る関数\n",
+    "    \"\"\"APIを使ってRAGによる解答を得る関数\n",
     "\n",
     "    Question (str): 質問内容\n",
     "        context (str): 解答の根拠になるテキスト情報\n",
@@ -185,7 +185,7 @@
    "outputs": [],
    "source": [
     "def get_scores_from_response(openai_response_template):\n",
-    "    \"\"\"OpenAI APIのレスポンスからトークンごとのスコアを抽出する関数\n",
+    "    \"\"\"OpenAI APIのレスポンスからスコアを抽出する関数\n",
     "\n",
     "    Args:\n",
     "        openai_response_template: OpenAI APIのレスポンスオブジェクト\n",
